--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -2,7 +2,7 @@
 # Runners spec: https://docs.github.com/en/free-pro-team@latest/actions/reference/specifications-for-github-hosted-runners
 # Glob expressions: https://github.com/actions/toolkit/tree/main/packages/glob
 
-name: Coq Platform CI
+name: Macos
 
 ###############################################################################
 # Schedule:
@@ -19,6 +19,12 @@ on:
       - '**'
   schedule:
     - cron: "0 0 * * *"
+  workflow_dispatch:
+    inputs:
+      platform:
+        description: 'Arguments for the platform script:'
+        required: true
+        default: '-extent=f -parallel=p -jobs=2 -vst=y -compcert=f'
 
 ###############################################################################
 # Platform script options shared among all jobs
@@ -27,145 +33,13 @@ env:
   PLATFORM_ARGS: -extent=f -parallel=p -jobs=2 -vst=y -compcert=f
   COQREGTESTING: y
 
-jobs:
-###############################################################################
-# Windows
-#
-# 2 jobs, the former builds the installer, the second tests it
-#
-# CAVEATS:
-# - git is misconfigured, by default it puts \r in between \n\n
-###############################################################################
-  Windows_platform:
-    name: Windows
-    runs-on: windows-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        architecture:
-          - '32'
-          - '64'
-
-    steps:
-      - name: Set git to use LF
-        run: |
-          git config --global core.autocrlf false
-          git config --global core.eol lf
-
-      - name: Git checkout
-        uses: actions/checkout@v2
-
-      - name: Run common platform script
-        shell: cmd
-        run: coq_platform_make_windows.bat -destcyg=C:\cygwin_coq_platform -arch=${{matrix.architecture}} %PLATFORM_ARGS%
-
-      - name: Create installer
-        shell: cmd
-        run: C:\cygwin_coq_platform\bin\bash --login -c "cd coq-platform/ && windows/create_installer_windows.sh && mkdir /cygdrive/c/installer && cp windows_installer/*exe /cygdrive/c/installer/"
-
-      - name: Create smoke test kit
-        shell: cmd
-        run: C:\cygwin_coq_platform\bin\bash --login -c "cd coq-platform/ && shell_scripts/create_smoke_test_kit.sh && mkdir /cygdrive/c/smoke && cp -ra smoke-test-kit/* /cygdrive/c/smoke/"
-
-      - name: 'Upload Artifact'
-        uses: actions/upload-artifact@v2
-        with:
-          name: 'Windows installer ${{matrix.architecture}} bits'
-          path: C:\installer\*.exe
-          retention-days: 5
-
-      - name: 'Upload smoke test kit'
-        uses: actions/upload-artifact@v2
-        with:
-          name: 'Smoke Test Kit Windows ${{matrix.architecture}} bits'
-          path: C:\smoke\
-          retention-days: 5
-
-  Windows_smoke:
-    name: Smoke test Windows
-    needs: Windows_platform
-    runs-on: windows-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        architecture:
-          - '32'
-          - '64'
-
-    steps:
-      - name: 'Download Artifact'
-        uses: actions/download-artifact@v2
-        id: download
-        with:
-          name: 'Windows installer ${{matrix.architecture}} bits'
-
-      - name: 'Download smoke test kit'
-        uses: actions/download-artifact@v2
-        id: download-smoke
-        with:
-          name: 'Smoke Test Kit Windows ${{matrix.architecture}} bits'
-
-      - name: 'Run Installer'
-        shell: cmd
-        run: |
-          cd ${{steps.download.outputs.download-path}}
-          FOR %%f IN (*.exe) DO %%f /S /D=C:\Coq
-
-      - name: 'Smoke coqc'
-        shell: cmd
-        run: C:\Coq\bin\coqc.exe -v
-
-      - name: 'Run Windows smoke test kit'
-        shell: cmd
-        run: |
-          CD ${{steps.download-smoke.outputs.download-path}}
-          DIR
-          SET PATH=C:\Coq\bin\;%PATH%
-          CALL run-smoke-test.bat
-
-###############################################################################
-# Ubuntu
-#
-# CAVEATS:
-# - you need bubblewrap or the script fails
-# - build-essential pulls in the C toolchain
-###############################################################################
-  Ubuntu_platform:
-    name: Ubuntu
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Git checkout
-        uses: actions/checkout@v2
-
-      - name: Install bubblewrap and build-essential
-        run: |
-          sudo apt-get update
-          sudo apt-get install bubblewrap build-essential
-
-      - name: Run common platform script
-        shell: bash
-        run: ./coq_platform_make.sh $PLATFORM_ARGS
-
-      - name: Create smoke test kit
-        shell: bash
-        run: |
-          eval $(opam env)
-          shell_scripts/create_smoke_test_kit.sh
-
-      - name: 'Run Linux smoke test kit'
-        shell: bash
-        run: |
-          eval $(opam env)
-          smoke-test-kit/run-smoke-test.sh
-
-
 ###############################################################################
 # Macos
 #
 # CAVEATS:
 # - COQREGTESTING broken, it makes the script loop, so we install opam by hand
 ###############################################################################
+jobs:
   Macos_platform:
     name: Macos
     runs-on: macos-latest
@@ -173,6 +47,10 @@ jobs:
     steps:
       - name: Git checkout
         uses: actions/checkout@v2
+
+      - name: Set PLATFORM
+        if: ${{ github.event.inputs.platform != '' }}
+        run: echo "PLATFORM=${{ github.event.inputs.platform }}" >> $GITHUB_ENV
 
       - name: Install opam
         env:
