--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -32,7 +32,7 @@ on:
       platform:
         description: 'Arguments for the platform script:'
         required: true
-        default: '-extent=f -parallel=p -jobs=2 -vst=y -compcert=f'
+        default: '-extent=f -parallel=p -jobs=2 -vst=n -compcert=n'
 
 ###############################################################################
 # Platform script options shared among all jobs
@@ -41,7 +41,7 @@ on:
 ###############################################################################
 env:
   COQREGTESTING: y
-  PLATFORM: -extent=i -parallel=p -jobs=2
+  PLATFORM: -extent=f -parallel=p -jobs=2 -vst=n -compcert=n
   SAVE_ARTIFACT: true
 
 jobs:
