--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -43,6 +43,13 @@ jobs:
   Macos_platform:
     name: Macos
     runs-on: macos-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        variant:
+          - '8.13'
+          - '8.12'
+          - 'dev'
 
     steps:
       - name: Git checkout
@@ -63,7 +70,7 @@ jobs:
 
       - name: Run common platform script
         shell: bash
-        run: ./coq_platform_make.sh $PLATFORM_ARGS
+        run: ./coq_platform_make.sh -packages=${{matrix.variant}} $PLATFORM_ARGS
 
       - name: Install bash (needed by smoke scripts)
         run: brew install bash
