--- a/linux/snap/coq-prover.desktop.in
+++ b/linux/snap/coq-prover.desktop.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=CoqIDE
-Exec=${SNAP}/coq-platform/@@COQ_VERSION@@/bin/coq_wrapper_coqide %F
+Exec=coq-prover.coqide
 Icon=${SNAP}/coq-platform/@@COQ_VERSION@@/share/coq/coq.png
 Type=Application
 MimeType=text/x-verilog
