Added option -dumplogs to enable dumping of logfiles (off by default)

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Run common platform script
         shell: bash
-        run: ./coq_platform_make.sh  -packages=${{matrix.variant}} $PLATFORM_ARGS
+        run: ./coq_platform_make.sh  -packages=${{matrix.variant}} $PLATFORM_ARGS -dumplogs
 
       - name: Create smoke test kit
         shell: bash
