--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -70,7 +70,7 @@ jobs:
 
       - name: Run common platform script
         shell: bash
-        run: ./coq_platform_make.sh -packages=${{matrix.variant}} $PLATFORM_ARGS
+        run: ./coq_platform_make.sh -packages=${{matrix.variant}} $PLATFORM_ARGS -dumplogs
 
       - name: Install bash (needed by smoke scripts)
         run: brew install bash
