CI Windows: made smoke test version dependent

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -84,14 +84,14 @@ jobs:
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v2
         with:
-          name: 'Windows installer ${{matrix.architecture}} bits'
+          name: 'Windows installer ${{matrix.variant}} ${{matrix.architecture}}'
           path: C:\installer\*.exe
           retention-days: 5
 
       - name: 'Upload smoke test kit'
         uses: actions/upload-artifact@v2
         with:
-          name: 'Smoke Test Kit Windows ${{matrix.architecture}} bits'
+          name: 'Smoke Test Kit Windows ${{matrix.variant}} ${{matrix.architecture}}'
           path: C:\smoke\
           retention-days: 5
 
@@ -105,19 +105,23 @@ jobs:
         architecture:
           - '32'
           - '64'
+        variant:
+          - '8.13'
+          - '8.12'
+          - 'dev'
 
     steps:
       - name: 'Download Artifact'
         uses: actions/download-artifact@v2
         id: download
         with:
-          name: 'Windows installer ${{matrix.architecture}} bits'
+          name: 'Windows installer ${{matrix.variant}} ${{matrix.architecture}}'
 
       - name: 'Download smoke test kit'
         uses: actions/download-artifact@v2
         id: download-smoke
         with:
-          name: 'Smoke Test Kit Windows ${{matrix.architecture}} bits'
+          name: 'Smoke Test Kit Windows ${{matrix.variant}} ${{matrix.architecture}}'
 
       - name: 'Run Installer'
         shell: cmd
