CI macOS: made smoke test version dependent

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -84,7 +84,7 @@ jobs:
       - name: 'Upload smoke test kit'
         uses: actions/upload-artifact@v2
         with:
-          name: 'Smoke Test Kit Macos'
+          name: 'Smoke Test Kit Macos ${{matrix.variant}}'
           path: smoke-test-kit/
           retention-days: 5
 
@@ -105,13 +105,13 @@ jobs:
         uses: actions/upload-artifact@v2
         if: failure()
         with:
-          name: 'DMG script error logs'
+          name: 'DMG script error logs ${{matrix.variant}}'
           path: macos_installer/logs/
 
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v2
         with:
-          name: 'Macos installer'
+          name: 'Macos installer ${{matrix.variant}}'
           path: macos_installer/coq-*-installer-macos.dmg
           retention-days: 5
 
@@ -119,6 +119,13 @@ jobs:
     name: Smoke test Macos
     needs: Macos_platform
     runs-on: macos-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        variant:
+          - '8.13'
+          - '8.12'
+          - 'dev'
 
     steps:
       - name: Install bash
@@ -128,13 +135,13 @@ jobs:
         uses: actions/download-artifact@v2
         id: download
         with:
-          name: 'Macos installer'
+          name: 'Macos installer ${{matrix.variant}}'
 
       - name: 'Download smoke test kit'
         uses: actions/download-artifact@v2
         id: download-smoke
         with:
-          name: 'Smoke Test Kit Macos'
+          name: 'Smoke Test Kit Macos ${{matrix.variant}}'
 
       - name: 'Run Installer'
         shell: bash
