--- a/linux/snap/snapcraft.yaml.in
+++ b/linux/snap/snapcraft.yaml.in
@@ -12,7 +12,7 @@ parts:
   coq:
     plugin: nil
     build-packages: [build-essential, curl, m4, unzip, git]
-    stage-packages: [make]
+    stage-packages: [make, libmpfr6, libgmp10]
     source: .
     source-type: local
     override-build: |
