--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -24,13 +24,13 @@ on:
       platform:
         description: 'Arguments for the platform script:'
         required: true
-        default: '-extent=f -parallel=p -jobs=2 -vst=y -compcert=f'
+        default: '-extent=f -parallel=p -jobs=2 -vst=y -compcert=y'
 
 ###############################################################################
 # Platform script options shared among all jobs
 ###############################################################################
 env:
-  PLATFORM_ARGS: -extent=f -parallel=p -jobs=2 -vst=y -compcert=f
+  PLATFORM_ARGS: -extent=f -parallel=p -jobs=2 -vst=y -compcert=y
   COQREGTESTING: y
 
 ###############################################################################
