--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -49,7 +49,7 @@ jobs:
       fail-fast: false
       matrix:
         variant:
-          - '8.14'
+          - '8.14+beta1'
           - '8.13'
           - '8.13~2021.02'
           - '8.12'
