Tools: improved script for upstream notifications

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ cygwin_cache/
 macos_installer/
 smoke-test-kit/
 source-statistics/
+maintainer_scripts/ci_package_list.sh
+maintainer_scripts/patched_package_list.sh
