Finalized preview versions - Version 8.14+ltacdebug: adjusted package pick to 8.14.0, included in ReadMe and fixed various issues - Version dev: editorial adjustments to package list file and included   in ReadMe

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -53,6 +53,7 @@ jobs:
           - '8.13'
           - '8.13~2021.02'
           - '8.12'
+          - 'ltacdebug'
 
     steps:
       - name: Git checkout
