--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -53,6 +53,7 @@ jobs:
           - '32'
           - '64'
         variant:
+          # Keep this in sync with the Smoke test below
           - '8.14~2021.11'
           - '8.15~2022.01'
 
@@ -107,7 +108,7 @@ jobs:
           - '64'
         variant:
           - '8.14~2021.11'
-          - '8.13~2021.11'
+          - '8.15~2022.01'
 
     steps:
       - name: 'Download Artifact'
