--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -49,10 +49,10 @@ jobs:
       fail-fast: false
       matrix:
         variant:
-          - '8.14~2021.11'
-          - '8.13~2021.11'
+          - '8.14~2022.01'
+          - '8.13~2022.01'
           - '8.12'
-          - '8.15~2022.01'
+          - '8.15~preview1'
           - 'ltacdebug'
 
     steps:
