--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -49,7 +49,7 @@ jobs:
       matrix:
         variant:
           - '8.14~2022.01'
-          - '8.13~2022.01'
+          - '8.15~beta1'
 
     steps:
       - name: Git checkout
@@ -124,7 +124,7 @@ jobs:
       matrix:
         variant:
           - '8.14~2022.01'
-          - '8.13~2022.01'
+          - '8.15~beta1'
 
     steps:
       - name: Install bash
