--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -52,7 +52,7 @@ jobs:
           - '8.14~2022.01'
           - '8.13~2022.01'
           - '8.12'
-          - '8.15~preview1'
+          - '8.15~beta1'
           - 'dev'
 
     steps:
