--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -3,8 +3,12 @@
 
 APPLY_FIXES: all # all, none, or list of linter keys
 # ENABLE: # If you use ENABLE variable, all other languages/formats/tooling-formats will be disabled by default
-ENABLE_LINTERS: # If you use ENABLE_LINTERS variable, all other linters will be disabled by default
-  - SPELL_MISSPELL
-SHOW_ELAPSED_TIME: true
+# ENABLE_LINTERS: # If you use ENABLE_LINTERS variable, all other linters will be disabled by default
+DISABLE:
+  - COPYPASTE # Comment to enable checks of excessive copy-pastes
+  # - SPELL # Uncomment to disable checks of spelling mistakes
+DISABLE_LINTERS:
+- SPELL_CSPELL
+SHOW_ELAPSED_TIME: false
 FILEIO_REPORTER: false
 # DISABLE_ERRORS: true # Uncomment if you want MegaLinter to detect errors but not block CI to pass
