--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -8,7 +8,12 @@ DISABLE:
   - COPYPASTE # Comment to enable checks of excessive copy-pastes
   # - SPELL # Uncomment to disable checks of spelling mistakes
 DISABLE_LINTERS:
-- SPELL_CSPELL
+  - SPELL_CSPELL
+  - ACTION_ACTIONLINT
+  - BASH_SHELLCHECK
+  - C_CPPLINT
+  - BASH_SHFMT
+  - MARKDOWN_MARKDOWNLINT
 SHOW_ELAPSED_TIME: false
 FILEIO_REPORTER: false
 # DISABLE_ERRORS: true # Uncomment if you want MegaLinter to detect errors but not block CI to pass
