--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -27,10 +27,8 @@ jobs:
       # Git Checkout
       - name: Checkout Code
         uses: actions/checkout@v2
-        env:
-          PAT: ${{ secrets.PAT_LINT_SPELL }}
         with:
-          token: ${{ secrets.PAT_LINT_SPELL || secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT_LINT_SPELL }}
           fetch-depth: 0
 
       # MegaLinter
@@ -43,7 +41,7 @@ jobs:
           # All available variables are described in documentation
           # https://megalinter.github.io/configuration/
           VALIDATE_ALL_CODEBASE: true # Set ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }} to validate only diff with main branch
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT_LINT_SPELL }}
           # ADD YOUR CUSTOM ENV VARIABLES HERE TO OVERRIDE VALUES OF .mega-linter.yml AT THE ROOT OF YOUR REPOSITORY
 
       # Upload MegaLinter artifacts
