--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -148,19 +148,19 @@ jobs:
           cd ${{steps.download.outputs.download-path}}
           DMG=$(ls Coq-Platform-*.dmg)
           hdiutil attach $DMG
-          cp -r /Volumes/${DMG%%.dmg}/Coq_*.app /Applications/
+          cp -r /Volumes/${DMG%%.dmg}/Coq-Platform*.app /Applications/
           hdiutil detach /Volumes/${DMG%%.dmg}/
 
       - name: 'Smoke coqc'
         shell: bash
         run: |
-          cd /Applications/Coq_*.app/Contents/Resources/bin/
+          cd /Applications/Coq-Platform*.app/Contents/Resources/bin/
           ./coqc -v
 
       - name: 'Run Macos smoke test kit'
         shell: bash
         run: |
-          export PATH="$PATH:$(cd /Applications/Coq_*.app/Contents/Resources/bin/; pwd)"
+          export PATH="$PATH:$(cd /Applications/Coq-Platform*.app/Contents/Resources/bin/; pwd)"
           cd ${{steps.download-smoke.outputs.download-path}}
           chmod a+x ./run-smoke-test.sh
           ./run-smoke-test.sh
