--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -56,7 +56,9 @@ jobs:
       fail-fast: false
       matrix:
         variant:
+          # This should contain all picks introduced in the current release + all original picks of all Coq versions
           - '8.15~2022.03'
+          - '8.14~2022.03'
           - '8.14~2022.01'
           - '8.13~2021.02'
           - '8.12'
