--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -57,6 +57,7 @@ jobs:
       matrix:
         variant:
           # This should contain all picks introduced in the current release + all original picks of all Coq versions
+          - '8.16~2022.09~preview1.sh'
           - '8.15~2022.04'
           - '8.14~2022.04'
           - '8.14~2022.01'
