--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -54,8 +54,8 @@ jobs:
           - '64'
         variant:
           # Keep this in sync with the Smoke test below
+          - '8.16~2022.09~preview1.sh'
           - '8.15~2022.04'
-          - '8.14~2022.04'
 
     steps:
       - name: Set git to use LF
@@ -107,8 +107,8 @@ jobs:
           - '32'
           - '64'
         variant:
+          - '8.16~2022.09~preview1.sh'
           - '8.15~2022.04'
-          - '8.14~2022.04'
 
     steps:
       - name: 'Download Artifact'
