--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -59,6 +59,13 @@ jobs:
         if: ${{ github.event.inputs.platform != '' }}
         run: echo "PLATFORM=${{ github.event.inputs.platform }}" >> $GITHUB_ENV
 
+      - name: Cleanup HomeBrew caches
+        # This is to avoid errors of the kind
+        # ==> Downloading https://ghcr.io/v2/homebrew/core/harfbuzz/manifests/5.1.0
+        # Error: adwaita-icon-theme: Failed to download resource "harfbuzz_bottle_manifest"
+        # The downloaded GitHub Packages manifest was corrupted or modified (it is not valid JSON): 
+        run: brew cleanup
+
       - name: Run common platform script
         shell: bash
         run: ./coq_platform_make.sh -packages=${{matrix.variant}} $PLATFORM_ARGS -dumplogs
